// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes visibility 1`] = `
<div
  className="test-classname"
>
  <Radio
    checked={true}
    className="huge-spacer-right visibility-public"
    disabled={false}
    key="public"
    onCheck={[MockFunction]}
    value="public"
  >
    <div>
      visibility.public
    </div>
  </Radio>
  <Radio
    checked={false}
    className="huge-spacer-right visibility-private"
    disabled={false}
    key="private"
    onCheck={[MockFunction]}
    value="private"
  >
    <div>
      visibility.private
    </div>
  </Radio>
</div>
`;

exports[`changes visibility 2`] = `
<div
  className="test-classname"
>
  <Radio
    checked={false}
    className="huge-spacer-right visibility-public"
    disabled={false}
    key="public"
    onCheck={
      [MockFunction] {
        "calls": [
          [
            "private",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    value="public"
  >
    <div>
      visibility.public
    </div>
  </Radio>
  <Radio
    checked={true}
    className="huge-spacer-right visibility-private"
    disabled={false}
    key="private"
    onCheck={
      [MockFunction] {
        "calls": [
          [
            "private",
          ],
        ],
        "results": [
          {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
    value="private"
  >
    <div>
      visibility.private
    </div>
  </Radio>
</div>
`;

exports[`renders disabled 1`] = `
<div
  className="test-classname"
>
  <Radio
    checked={true}
    className="huge-spacer-right visibility-public"
    disabled={false}
    key="public"
    onCheck={[MockFunction]}
    value="public"
  >
    <div>
      visibility.public
    </div>
  </Radio>
  <Radio
    checked={false}
    className="huge-spacer-right visibility-private"
    disabled={true}
    key="private"
    onCheck={[MockFunction]}
    value="private"
  >
    <div>
      visibility.private
    </div>
  </Radio>
</div>
`;
